new URL is deprecated, use new URI, AbstractHTML.